Fix cart submission page position issue on iOS Beep App (#1920)

--- a/src/ordering/containers/shopping-cart/containers/CartSubmissionStatus/CartSubmissionStatus.scss
+++ b/src/ordering/containers/shopping-cart/containers/CartSubmissionStatus/CartSubmissionStatus.scss
@@ -2,7 +2,7 @@
 
 .ordering-submission {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 
   &__loader {
     display: block;
